--- a/notebooks/03_graph_and_routing.ipynb
+++ b/notebooks/03_graph_and_routing.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "807a5030",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "c5e849d9",
    "metadata": {},
    "outputs": [],
@@ -804,7 +804,8 @@
       "text/plain": [
        "Index(['pair_idx', 'src_x', 'src_y', 'dst_x', 'dst_y', 'shortest_len_m',\n",
        "       'shortest_risk_total_sum', 'safe_len_m', 'safe_risk_total_sum',\n",
-       "       'len_constraint_max_m', 'safe_feasible', 'delta_L', 'delta_R', 'eta',\n",
+       "       'len_constraint_max_m', 'safe_feasible', 'crashes_expected_dist',\n",
+       "       'crashes_expected_safe', 'crashes_avoided', 'delta_L', 'delta_R', 'eta',\n",
        "       'eps', 'n_pairs_target'],\n",
        "      dtype='object')"
       ]
@@ -820,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "f1f45955",
    "metadata": {},
    "outputs": [
@@ -828,7 +829,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6v/992p8knd6g5flm6m0p856jlw0000gn/T/ipykernel_56621/3519027837.py:7: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/6v/992p8knd6g5flm6m0p856jlw0000gn/T/ipykernel_15747/3260724952.py:7: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda g: pd.Series({\n"
      ]
     },
@@ -869,6 +870,7 @@
        "      <th>median_crashes_expected_dist</th>\n",
        "      <th>median_crashes_expected_safe</th>\n",
        "      <th>median_crashes_avoided</th>\n",
+       "      <th>frac_expected_crashes_avoided</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -890,6 +892,7 @@
        "      <td>270.1</td>\n",
        "      <td>219.5</td>\n",
        "      <td>32.0</td>\n",
+       "      <td>0.187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -909,6 +912,7 @@
        "      <td>364.8</td>\n",
        "      <td>308.3</td>\n",
        "      <td>35.8</td>\n",
+       "      <td>0.155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -928,6 +932,7 @@
        "      <td>458.3</td>\n",
        "      <td>396.2</td>\n",
        "      <td>38.7</td>\n",
+       "      <td>0.136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -947,6 +952,7 @@
        "      <td>270.1</td>\n",
        "      <td>205.4</td>\n",
        "      <td>43.8</td>\n",
+       "      <td>0.239</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -966,6 +972,7 @@
        "      <td>364.8</td>\n",
        "      <td>298.3</td>\n",
        "      <td>50.5</td>\n",
+       "      <td>0.182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -985,6 +992,7 @@
        "      <td>458.3</td>\n",
        "      <td>378.7</td>\n",
        "      <td>60.6</td>\n",
+       "      <td>0.174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1004,6 +1012,7 @@
        "      <td>270.1</td>\n",
        "      <td>190.2</td>\n",
        "      <td>61.9</td>\n",
+       "      <td>0.296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1023,6 +1032,7 @@
        "      <td>364.8</td>\n",
        "      <td>272.1</td>\n",
        "      <td>70.6</td>\n",
+       "      <td>0.254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1042,6 +1052,7 @@
        "      <td>458.3</td>\n",
        "      <td>350.8</td>\n",
        "      <td>82.7</td>\n",
+       "      <td>0.235</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1092,19 +1103,19 @@
        "7                         364.8                         272.1   \n",
        "8                         458.3                         350.8   \n",
        "\n",
-       "   median_crashes_avoided  \n",
-       "0                    32.0  \n",
-       "1                    35.8  \n",
-       "2                    38.7  \n",
-       "3                    43.8  \n",
-       "4                    50.5  \n",
-       "5                    60.6  \n",
-       "6                    61.9  \n",
-       "7                    70.6  \n",
-       "8                    82.7  "
+       "   median_crashes_avoided  frac_expected_crashes_avoided  \n",
+       "0                    32.0                          0.187  \n",
+       "1                    35.8                          0.155  \n",
+       "2                    38.7                          0.136  \n",
+       "3                    43.8                          0.239  \n",
+       "4                    50.5                          0.182  \n",
+       "5                    60.6                          0.174  \n",
+       "6                    61.9                          0.296  \n",
+       "7                    70.6                          0.254  \n",
+       "8                    82.7                          0.235  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,6 +1164,15 @@
     "#     summary_fmt[c] = summary_fmt[c].round(3)\n",
     "\n",
     "trips_scale = 100_000\n",
+    "scaled_dist = summary_fmt[\"median_crashes_expected_dist\"] * trips_scale\n",
+    "scaled_safe = summary_fmt[\"median_crashes_expected_safe\"] * trips_scale\n",
+    "\n",
+    "summary_fmt[\"frac_expected_crashes_avoided\"] = (\n",
+    "    ((scaled_dist - scaled_safe) / scaled_dist)\n",
+    "    .replace([np.inf, -np.inf], np.nan)\n",
+    "    .round(3)\n",
+    ")\n",
+    "\n",
     "for c in [\"median_crashes_expected_dist\", \"median_crashes_expected_safe\", \"median_crashes_avoided\"]:\n",
     "    summary_fmt[c] = (summary_fmt[c] * trips_scale).round(1)\n",
     "\n",
@@ -1175,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "3a1ecb50",
    "metadata": {},
    "outputs": [
